--- a/index.html
+++ b/index.html
@@ -102,15 +102,19 @@
             </div>
         </div>
     </section>
+
     <br><br>
     <hr>
-    <br><br>
+   <br><br>
+
     <u><h1>Weekly Sermens</h1></u>
     <br>
-    <h2>Rev.Fr.Alwin Fernando</h2>
+    <h2 id="a">Rev.Fr.Alwin Fernando</h2>
     <br>
-    <div class="row">
+    <div class="row" id="t">
+
         <div class="col-md-2"></div>
+
         <div class="col-md-3">
             <h2> <u>SINHALA</u></h2>
             <h5>17.01.2021</h5><br>
@@ -118,12 +122,7 @@
                 <source src="Sinhala 17.01.2021.m4a" type="audio/ogg">
                 <source src="" type="audio/mpeg">
             </audio>
-
-
-
         </div>
-
-
 
         <div class="col-md-2">
             <h2><u>TAMIL</u></h2>
@@ -132,11 +131,10 @@
                 <source src="Tamil 17.01.2021.m4a" type="audio/ogg">
                 <source src="" type="audio/mpeg">
             </audio>
-
-
-
         </div>
+
         <div class="col-md-1"></div>
+
         <div class="col-md-4">
             <h2><u>ENGLISH</u></h2>
             <h5>17.01.2021</h5><br>
@@ -147,11 +145,16 @@
 
 
         </div>
+        </div>
 <hr>
 
 
 
-
+<div class="row">
+    <div class="col-md-5"></div>
+    <div class="col-md-3">&copy;Synergy</div>
+    <div class="col-md-4"></div>
+</div>
 
 
 
